[package]
name = "han-ed"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
bevy = { version = "0.10.1", default-features = false, features = [
  "bevy_asset",
  "bevy_core_pipeline",
  "bevy_pbr",
  "bevy_render",
  "bevy_scene", # allow loading scenes to see effects in situ?
  "bevy_winit",
  "filesystem_watcher",
  "hdr",
  "png",
  "x11",
  "serialize"
] }
bevy-inspector-egui = "0.18.3"
bevy_egui = "0.20.3"
#bevy_hanabi = { path = "../clone/bevy_hanabi", default-features = false, features = [ "3d" ] }
bevy_hanabi = { git = "https://github.com/yrns/bevy_hanabi.git", branch = "reflect", default-features = false, features = [ "3d" ] }
glob = "0.3.1"
path-absolutize = "3.1.0"
relative-path = { version = "1.8.0", features = [ "serde" ] }
ron = "0.8.0"
serde = { version = "1.0" }
